--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>React App</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="reset.css" />
+	
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
